HLT-2895: reverted dual pricing as a deferred file (breaks confirmation page), fixed "why premium" not showing content on payment page & fixed sm breakpoint on more info for current pricing when a coming soon price is returned

--- a/src/main/webapp/bundles/health/less/dualPricing.less
+++ b/src/main/webapp/bundles/health/less/dualPricing.less
@@ -295,6 +295,7 @@
 
 				.current-pricing {
 					display: table-cell;
+					width: 40%;
 
 					h3 {
 						color: @dual-pricing-dark-font-colour;
